apps/emqx/templates/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: bazarr-auth
#   namespace: authentik
# spec:
#   rules:
#     - host: bazarr.mobrockers.com
#       http:
#         paths: 
#           - path: /outpost.goauthentik.io
#             pathType: Prefix
#             backend:
#               service:
#                 name: ak-outpost-authentik-embedded-outpost
#                 port:
#                   number: 9000
#   tls:
#     - hosts:
#         - bazarr.mobrockers.com
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-url: |-
  #       http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
  #   nginx.ingress.kubernetes.io/auth-signin: |-
  #       https://bazarr.mobrockers.com/outpost.goauthentik.io/start?rd=$escaped_request_uri
  #   nginx.ingress.kubernetes.io/auth-response-headers: |-
  #       Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
  #   nginx.ingress.kubernetes.io/auth-snippet: |
  #       proxy_set_header X-Forwarded-Host $http_host;
spec:
  rules:
    - host: emqx.mobrockers.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: emqx-dashboard
                port:
                  name: http
            pathType: Prefix
  tls:
    - hosts:
        - emqx.mobrockers.com
